--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "@types/react": "18.2.28",
-    "@types/react-dom": "18.2.13"
+    "@types/react-dom": "18.2.13",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -15,6 +15,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "react-router-dom": "^6.17.0",
     "react-scripts": "latest"
   },
   "browserslist": {
