--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/react-dom": "18.2.13",
     "axios": "^1.5.1",
     "dotenv": "^16.3.1",
+    "primereact": "^10.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
